# template-qt

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
